# thermal_camera_node

./: CMakeLists.txt  package.xml
src/: thermal_camera_node.cpp
