<?xml version="1.0"?>
<package>
  <name>thermal_camera_node</name>
  <version>1.0.0</version>
  <description>The thermal_camera_node package</description>
  <maintainer email="german.moreno@eurecat.org">Germán Moreno</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
</package>